feat(Influencers): Add influencer on the PhysicEngine
- start implementing Influencer update in the PhysicEngine according to the test InfluencerApplyForceToEntityTest.

wip #56